Moved point names to variables in CalculateConsolidatedChartHeightTest.java for better readability